fix team page fund details section mobile view

--- a/components/page/team-details/TeamInvestorDetails/TeamInvestorDetails.module.scss
+++ b/components/page/team-details/TeamInvestorDetails/TeamInvestorDetails.module.scss
@@ -2,12 +2,12 @@
 
 .content {
   display: grid;
-  grid-template-columns: 1fr;
   gap: 12px;
   align-items: flex-start;
+  grid-template-columns: 1fr;
 
-  @include media.tablet-landscape {
-    grid-template-columns: 1fr 1fr 1fr;
+  @include media.desktop {
+    grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
   }
 }
 
